# ood-slam

./: .gitignore  README.md  main.py  pyproject.toml
configs/: __init__.py  config.yaml  preprocess_kitti.yaml
configs/experiment/: deepvo_reproduction.yaml
configs/model/: deepvo.yaml
configs/resources/: gpu.yaml
data/: image_seq_datamodule.py  preprocess.py  utils.py
multirun/2025-11-17/13-49-27/: multirun.yaml
multirun/2025-11-17/16-18-54/: multirun.yaml
multirun/2025-11-17/16-22-20/: multirun.yaml
multirun/2025-11-17/17-47-14/: multirun.yaml
multirun/2025-11-17/17-55-55/: multirun.yaml
ood_slam/: main.py  trainer.py
ood_slam/configs/: __init__.py  config.py  config.yaml  preprocess_kitti.yaml
ood_slam/configs/cluster/: local.yaml  mila.yaml  narval.yaml
ood_slam/configs/data/: deepvo_kitti.yaml  deepvo_kitti_error_classif.yaml  deepvo_kitti_error_reg.yaml
ood_slam/configs/experiment/: deepvo_error_classif.yaml  deepvo_error_reg.yaml  overfit.yaml
ood_slam/configs/model/: deepvo.yaml  deepvo_error_classif.yaml  deepvo_error_reg.yaml
ood_slam/configs/resources/: cpu.yaml  gpu.yaml
ood_slam/data/: image_seq_datamodule.py  image_seq_dataset.py  image_seq_rpe_datamodule.py  image_seq_rpe_dataset.py  preprocess.py
ood_slam/models/: DeepVO.py  DeepVO_RPE_classification.py  DeepVO_RPE_regression.py  base_model.py
ood_slam/utils/: env_vars.py  remote_launcher_plugin.py
outputs/2025-11-14/16-58-11/.hydra/: hydra.yaml
outputs/2025-11-14/16-59-31/.hydra/: config.yaml  hydra.yaml
outputs/2025-11-14/17-01-05/.hydra/: hydra.yaml
outputs/2025-11-14/17-03-53/.hydra/: config.yaml  hydra.yaml
outputs/2025-11-14/17-04-15/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-11-17/19-00-05/.hydra/: hydra.yaml
outputs/2025-11-17/19-15-51/.hydra/: hydra.yaml
outputs/2025-11-17/19-16-22/.hydra/: hydra.yaml  overrides.yaml
outputs/2025-11-17/19-17-07/.hydra/: config.yaml  hydra.yaml
outputs/2025-11-17/19-22-27/.hydra/: hydra.yaml  overrides.yaml
utils/: env_vars.py
