[project]
name = "ood-slam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.4.1",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "wandb>=0.17.6",
    "lightning>=2.4.0",
    "torchvision>=0.19.0",
    "rich>=13.7.1",
    "tqdm>=4.66.5",
    "hydra-zen==0.13.1rc1",
    "matplotlib>=3.9.2",
    "optree>=0.15.0",
    # Hugging Face dependencies:
    "evaluate>=0.4.2",
    "transformers>=4.44.0",
    "datasets>=2.21.0",
    # Hydra / submitit plugins
    "hydra-colorlog>=1.2.0",
    "remote-slurm-executor",
    "hydra-auto-schema>=0.0.7",
    "hydra-orion-sweeper>=1.6.4 ; python_full_version < '3.11'",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "ruff>=0.6.0",
    "pre-commit>=3.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
]

[tool.pytest.ini_options]
testpaths = ["ood_slam", "tests"]

# Required to use torch deterministic mode
env = ["CUBLAS_WORKSPACE_CONFIG=:4096:8"]
addopts = [
    "--doctest-modules",
]

[tool.ruff]
line-length = 99
indent-width = 4
lint.select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.uv]
managed = true

[tool.uv.sources]
remote-slurm-executor = { git = "https://github.com/lebrice/remote-slurm-executor", branch = "master" }